client/frontend/views/moderator/moderator-view.css
.moderator-view {
  display: block;
}

div.moderator-view {
  width: 100%;
  text-align: center;
  margin-left: auto;
  margin-right: auto;

  height: 100%;
  height: -webkit-fill-available;
  height: fill-available;

  display: flex;
  flex-direction: column;
}

vaadin-tabs.moderator-tabs {
  width: 90%;
  margin-left: auto;
  margin-right: auto;
}

vaadin-button.add-teacher,
vaadin-button.add-subject {
  margin-top: 15px;
}

/* Grid */
vaadin-grid {
  margin-top: 15px;
  margin-bottom: 15px;
  flex-grow: 2;
  border: none;
}

/* Paging */
vaadin-horizontal-layout.paging-layout {
  width: 100%;
  display: flex;
  justify-content: center;
  padding-bottom: 15px;
}

vaadin-horizontal-layout.paging-layout label {
  align-self: center;
}

/* Add teacher/subject - Dialog */
vaadin-vertical-layout.dialog-layout label {
  width: 100%;
  text-align: center;
  font-weight: bold;
  font-size: 16pt;
}

vaadin-vertical-layout.dialog-layout vaadin-text-field {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

vaadin-vertical-layout.dialog-layout vaadin-horizontal-layout {
  width: 60%;
  margin-top: 40px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  justify-content: center;
  gap: 20px;
}

vaadin-vertical-layout.dialog-layout vaadin-horizontal-layout * {
  flex-grow: 1;
}

